fixed collapse

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1632,6 +1632,10 @@ iframe {
   margin-bottom: 10px !important;
 }
 
+.creative-container .collapse {
+  display: none;
+}
+
 .team .team-container {
   margin-right: 100px;
 }
@@ -2192,39 +2196,7 @@ iframe {
   .section-pink .advantage-container {
     display: block;
   }
-  .title-repeat {
-    padding-top: 25px;
-  }
-  .title-repeat:before {
-    left: -50px;
-    top: 0;
-    bottom: 0;
-    right: 0;
-  }
-  .advantage-left, .feature-container__left, .feature-container__list, .creative-container__left {
-    margin-left: 0;
-  }
-  .partners .partners__container {
-    grid-template-areas: "g1 g2" "g1 g3" "g4 g5" "g6 g7" "g8 g9";
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    margin-top: 50px;
-  }
-  .team .personal-container__items {
-    margin-left: 60px !important;
-  }
-  .creative-container .carousel {
-    display: block !important;
-  }
-  .creative-container .creative-container__bottom {
-    display: none !important;
-  }
-}
-
-@media (max-width: 768px) {
-  .advantage-left .btn-primary {
+  .section-pink .advantage-container .advantage-left .btn-primary {
     background-color: transparent;
     border: none;
     color: #F55449;
@@ -2234,17 +2206,37 @@ iframe {
     font-size: 26px;
     line-height: 38px;
   }
-  .advantage-left .btn-primary:hover, .advantage-left .btn-primary:focus, .advantage-left .btn-primary:active, .advantage-left .btn-primary:not(:disabled):not(.disabled).active, .advantage-left .btn-primary:not(:disabled):not(.disabled):active, .advantage-left .btn-primary .show > .btn-primary.dropdown-toggle {
-    color: #F55449;
+  .section-pink .advantage-container .advantage-left .card-body {
     background-color: transparent;
-    border: none;
-    padding: 0;
-    -webkit-box-shadow: none;
-            box-shadow: none;
   }
-  .advantage-left .collapse .card {
-    background: transparent;
-    padding: 0;
+  .section-pink .advantage-container .title-repeat {
+    padding-top: 25px;
+  }
+  .section-pink .advantage-container .title-repeat:before {
+    left: -50px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+  }
+  .section-pink .advantage-container .advantage-left, .section-pink .advantage-container .feature-container__left, .section-pink .advantage-container .feature-container__list, .section-pink .advantage-container .creative-container__left {
+    margin-left: 0;
+  }
+  .section-pink .advantage-container .partners .partners__container {
+    grid-template-areas: "g1 g2" "g1 g3" "g4 g5" "g6 g7" "g8 g9";
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin-top: 50px;
+  }
+  .section-pink .advantage-container .team .personal-container__items {
+    margin-left: 60px !important;
+  }
+  .section-pink .advantage-container .creative-container .carousel {
+    display: block !important;
+  }
+  .section-pink .advantage-container .creative-container .creative-container__bottom {
+    display: none !important;
   }
   .btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus, .show > .btn-primary.dropdown-toggle:focus {
     -webkit-box-shadow: none !important;
@@ -2387,7 +2379,7 @@ iframe {
   }
 }
 
-@media (max-width: 768px) and (max-width: 540px) {
+@media (max-width: 992px) and (max-width: 540px) {
   .header-btn__down {
     margin-bottom: 24px;
     display: block;
@@ -2451,6 +2443,21 @@ iframe {
     text-align: center;
     height: auto;
     width: 100%;
+  }
+}
+
+@media (max-width: 992px) and (max-width: 768px) {
+  .advantage-left:hover, .advantage-left:focus, .advantage-left:active, .advantage-left:not(:disabled):not(.disabled).active, .advantage-left:not(:disabled):not(.disabled):active, .advantage-left .show > .btn-primary.dropdown-toggle {
+    color: #F55449;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .collapse .card {
+    background-color: #072652;
+    padding: 0;
   }
 }
 
